--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
+        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <property name="java-output-path" value="/pm/WebRoot/WEB-INF/classes"/>
-        <property name="context-root" value="sht"/>
+        <property name="context-root" value="sht-web-pc"/>
     </wb-module>
 </project-modules>
