--- a/WebRoot/css/login_style.css
+++ b/WebRoot/css/login_style.css
@@ -1,3 +1,4 @@
+/* 登陆框 */
 .login_box{
 	margin: 10% auto;
 	width: 390px;
@@ -7,28 +8,28 @@
 }
 
 .login_close{
-	width: 16px;
-	height: 16px;
+	width: 4%;
+	height: 4%;
 	float: right;
 	font-size: 12px;
 	text-decoration: none;
 	border: solid 1px rgb(243,243,243);
 	background-color: rgb(243,243,243);
 	border-radius:50%;
-	-moz-border-radius: 50%;      
+	/* -moz-border-radius: 50%;   */    
 	-webkit-border-radius: 50%;
 	text-align: center;
 }
 .login_close:hover{
 	
-	width: 16px;
-	height: 16px;
+	width: 4%;
+	height: 4%;
 	font-size: 12px;
 	text-decoration: none;
 	border: solid 1px rgb(243,243,243);
 	background-color: grey;
 	border-radius:50%;
-	-moz-border-radius: 50%;      
+	/* -moz-border-radius: 50%;   */    
 	-webkit-border-radius: 50%;
 	color: white;
 	text-align: center;
@@ -40,18 +41,28 @@
 /*登陆的标题*/
 .login_title{
 	width: 100%;
-	height: 40px;
+	height: 8%;
 	background-color: rgb(243,243,243);
 	text-align:center;
-	padding-top: 20px;
+	padding-top: 5%;
 	font-size: 19px;
 	letter-spacing:3px;
 }
-
-
+/* 登陆错误信息 */
+.login_msg{
+	width:80%;
+	height:5%;
+	margin-left:10%;
+	margin-bottom:2%;
+	text-align:center;
+	float:left;
+	color:red;
+	font-size:15px;
+	border-radius:5px;
+}
 /*登陆的输入框*/
 .login_input input{
-	width: 75%;
+	width: 70%;
 	margin-left: 10%;
 	height: 50px;
 	border: none;
@@ -102,12 +113,15 @@
 /*注册按钮*/
 .register_a{
 	border-radius:5px;
-	margin:20px auto;
+	margin:10% auto;
 	border: solid 1px blue;
-	width: 120px;
-	height: 30px;
+	width: 37%;
+	height: 9%;
 	text-align: center;
-	padding-top: 5px;
+	/* padding-top: 5%; */
+}
+.register_a:hover{
+	background-color:#FAFAFA;
 }
 .register_a a{
 	font-size: 20px;
