--- a/WebRoot/users/view/commonTitle.html
+++ b/WebRoot/users/view/commonTitle.html
@@ -40,7 +40,7 @@
             </div>
         </li>
         <li >
-            <a href="" >请登录</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="" >注册</a>
+            <a href="javascript:showlogin();closeregister();" >请登录</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="javascript:showregister();closelogin();" >注册</a>
         </li>
 
     </ul>
