--- a/WebRoot/users/css/personalIssue.css
+++ b/WebRoot/users/css/personalIssue.css
@@ -1,3 +1,4 @@
+		
 .title{
 	float: left;
     position: relative;
@@ -23,3 +24,9 @@
 	width:100%;
 	height:30%;
 }
+#title_table tr td{
+	padding-left:80px;
+}
+/* .issue_body table tr td{
+	padding-left: 40px;
+} */
