--- a/WebRoot/goods/css/index.css
+++ b/WebRoot/goods/css/index.css
@@ -101,9 +101,9 @@ section{
     border-radius: 5px;
 }
 
-.select>li:first-of-type{
+/* .select>li:first-of-type{
     background-color: #e6fdff;
-}
+} */
 
 .select>li:nth-of-type(2),.select>li:nth-of-type(3){
     margin-left: -5px;
@@ -263,7 +263,7 @@ section{
     border: 2px solid grey;
     display: none;
     width: 450px;
-    height: 280px;
+    height: 300px;
     position: absolute;
     left: 50%;
     margin-left:-225px;
@@ -297,6 +297,8 @@ section{
     width: 100%;
     text-align: left;
     position: relative;
+
+    height:auto;
 }
 .city_info>table:first-of-type tr{
     height: 30px;
@@ -306,10 +308,9 @@ section{
     width: 30px;
     cursor: pointer;
     padding-left: 10px;
-
 }
 
-.city_info>table:first-of-type tr td:hover{
+.city_info>table:first-of-type tr td:hover,.tablehover{
     background-color: darkorange;
 }
 
@@ -322,6 +323,7 @@ section{
     border: 1px solid grey;
     background-color: white;
     width: 300px;
+    height:auto;
     box-shadow:0px 0px  1px 1px #aaa;
 }
 
