修改商品发布，更新addr、goods的mapper和po
修改商品发布，更新addr、goods的mapper和po

--- a/WebRoot/goods/css/createGoods.css
+++ b/WebRoot/goods/css/createGoods.css
@@ -197,7 +197,7 @@ textarea{
 
 }
 
-.detail-info>ul>li>input{
+.detail-info>ul>li>input,.detail-info>ul>li>select{
     height: 30px;
     width: 200px;
 }
