地址增删改未完成版
地址增删改未完成版

--- a/WebRoot/users/css/addressmanage.css
+++ b/WebRoot/users/css/addressmanage.css
@@ -1,3 +1,19 @@
+.sc{
+	width:150px;
+}
+
+/* 注册错误信息 */
+.register_msg{
+	width:80%;
+	height:5%;
+	margin-left:10%;
+	margin-bottom:2%;
+	text-align:center;
+	float:left;
+	color:red;
+	font-size:15px;
+	border-radius:5px;
+}
 .head {
 	font-size: 14px;
 	width: 850px;
