--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
         <property name="java-output-path" value="/pm/WebRoot/WEB-INF/classes"/>
-        <property name="context-root" value="sht-web-pc"/>
+        <property name="context-root" value="sht"/>
     </wb-module>
 </project-modules>
