--- a/WebRoot/users/css/addressmanage.css
+++ b/WebRoot/users/css/addressmanage.css
@@ -1,22 +1,31 @@
-.sc{
-	width:150px;
+#bodyright {
+	float: left;
+	position: relative;
+	display: block;
+	
 }
-.ot{
-	width:150px
+
+.sc {
+	width: 150px;
+}
+
+.ot {
+	width: 150px
 }
 
 /* 注册错误信息 */
-.register_msg{
-	width:80%;
-	height:5%;
-	margin-left:10%;
-	margin-bottom:2%;
-	text-align:center;
-	float:left;
-	color:red;
-	font-size:15px;
-	border-radius:5px;
+.register_msg {
+	width: 80%;
+	height: 5%;
+	margin-left: 10%;
+	margin-bottom: 2%;
+	text-align: center;
+	float: left;
+	color: red;
+	font-size: 15px;
+	border-radius: 5px;
 }
+
 .head {
 	font-size: 14px;
 	width: 850px;
@@ -33,8 +42,8 @@
 .form-box {
 	position: relative;
 	margin-top: 20px;
-	width: 530px;
-	height: 374px;
+	width: 730px;
+	height: 380px;
 }
 
 .form-box .item-title {
@@ -51,7 +60,10 @@
 	text-align: left;
 	z-index: 100;
 }
-
+.addAddress_input{
+	width:730px;
+	height:300px;
+}
 #left1 {
 	color: #fc6210;
 	display: inline;
@@ -177,16 +189,17 @@ i {
 			border: 1px solid #afafaf;
 			font-size: 12px;
 		}*/
-
 textarea {
 	width: 394px;
 	height: 64px;
 	overflow: auto;
 	vertical-align: top;
 	font-family: tahoma, arial, 宋体, sans-serif;
-	font: 12px/1.5 tahoma, arial, 'Hiragino Sans GB', '\5b8b\4f53', sans-serif;
+	font: 12px/1.5 tahoma, arial, 'Hiragino Sans GB', '\5b8b\4f53',
+		sans-serif;
 }
-.inputbox{
+
+.inputbox {
 	margin-left: 10px;
 	font-size: 12px;
 }
@@ -366,18 +379,20 @@ option {
 	height: 13px;
 }
 
-.iteamsubmit{
-	width:530px;
-	height:38px;
+.iteamsubmit {
+	width: 530px;
+	height: 38px;
 }
-.save{
-	width:70px;
-	height:30px;
-	background-color:#ff4001;
-	font-size:14px;
-	color:white;
-	margin-left:110px;
+
+.save {
+	width: 70px;
+	height: 30px;
+	background-color: #ff4001;
+	font-size: 14px;
+	color: white;
+	margin-left: 110px;
 }
+
 .tsl {
 	font-size: 13px;
 }
@@ -408,17 +423,18 @@ option {
 	border: 1px solid #e7e7e7;
 	/* font-size: 12px; */
 }
+
 .tbl-main1 {
 	width: 97%;
 	table-layout: fixed;
 	border: 1px solid #e7e7e7;
 	font-size: 12px;
-	font-weight:normal;
-}
-.tbl-main tr{
-	border-bottom: 1px solid #e7e7e7;
+	font-weight: normal;
 }
 
+.tbl-main tr {
+	border-bottom: 1px solid #e7e7e7;
+}
 
 .thead {
 	width: 800px;
@@ -430,342 +446,319 @@ option {
 	border-color: inherit;
 }
 
-
-
 .city-picker-input {
-    opacity: 0 !important;
-    top: -9999px;
-    left: -9999px;
-    position: absolute;
+	opacity: 0 !important;
+	top: -9999px;
+	left: -9999px;
+	position: absolute;
 }
 
 .city-picker-span {
-    position: relative;
-    display: block;
-    outline: 0;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    border-bottom: 1px solid #ccc;
-    background-color: #fff;
-    color: #ccc;
-    cursor: pointer;
+	position: relative;
+	display: block;
+	outline: 0;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	border-bottom: 1px solid #ccc;
+	background-color: #fff;
+	color: #ccc;
+	cursor: pointer;
 }
 
-.city-picker-span > .placeholder {
-    color: #aaa;
+.city-picker-span>.placeholder {
+	color: #aaa;
 }
 
-.city-picker-span > .arrow {
-    position: absolute;
-    top: 50%;
-    right: 8px;
-    width: 10px;
-    margin-top: -3px;
-    height: 5px;
-    background: url(../img/drop-arrow.png) -10px -25px no-repeat;
+.city-picker-span>.arrow {
+	position: absolute;
+	top: 50%;
+	right: 8px;
+	width: 10px;
+	margin-top: -3px;
+	height: 5px;
+	background: url(../img/drop-arrow.png) -10px -25px no-repeat;
 }
 
-.city-picker-span.focus,
-.city-picker-span.open {
-    border-color: #46A4FF;
+.city-picker-span.focus, .city-picker-span.open {
+	border-color: #46A4FF;
 }
 
-.city-picker-span.open > .arrow {
-    background-position: -10px -10px;
+.city-picker-span.open>.arrow {
+	background-position: -10px -10px;
 }
 
-.city-picker-span > .title > span {
-    color: #333;
-    padding: 5px;
-    border-radius: 3px;
+.city-picker-span>.title>span {
+	color: #333;
+	padding: 5px;
+	border-radius: 3px;
 }
 
-.city-picker-span > .title > span:hover {
-    background-color: #f1f8ff;
+.city-picker-span>.title>span:hover {
+	background-color: #f1f8ff;
 }
 
 .city-picker-dropdown {
-    position: absolute;
-    width: 315px;
-    left: -9999px;
-    top: -9999px;
-    outline: 0;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    z-index: 999999;
-    display: none;
-    min-width: 330px;
-    margin-bottom: 20px;
+	position: absolute;
+	width: 315px;
+	left: -9999px;
+	top: -9999px;
+	outline: 0;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	z-index: 999999;
+	display: none;
+	min-width: 330px;
+	margin-bottom: 20px;
 }
 
 .city-select-wrap {
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .city-select-tab {
-    border-bottom: 1px solid #ccc;
-    background: #f0f0f0;
-    font-size: 13px;
+	border-bottom: 1px solid #ccc;
+	background: #f0f0f0;
+	font-size: 13px;
 }
 
-.city-select-tab > a {
-    display: inline-block;
-    padding: 8px 22px;
-    border-left: 1px solid #ccc;
-    border-bottom: 1px solid transparent;
-    color: #4D4D4D;
-    text-align: center;
-    outline: 0;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 14px;
-    margin-bottom: -1px;
+.city-select-tab>a {
+	display: inline-block;
+	padding: 8px 22px;
+	border-left: 1px solid #ccc;
+	border-bottom: 1px solid transparent;
+	color: #4D4D4D;
+	text-align: center;
+	outline: 0;
+	text-decoration: none;
+	cursor: pointer;
+	font-size: 14px;
+	margin-bottom: -1px;
 }
 
-.city-select-tab > a.active {
-    background: #fff;
-    border-bottom: 1px solid #fff;
-    color: #46A4FF;
+.city-select-tab>a.active {
+	background: #fff;
+	border-bottom: 1px solid #fff;
+	color: #46A4FF;
 }
 
-.city-select-tab > a:first-child {
-    border-left: none;
+.city-select-tab>a:first-child {
+	border-left: none;
 }
 
-.city-select-tab > a:last-child.active {
-    border-right: 1px solid #ccc;
+.city-select-tab>a:last-child.active {
+	border-right: 1px solid #ccc;
 }
 
 .city-select-content {
-    width: 100%;
-    min-height: 10px;
-    background-color: #fff;
-    /*padding: 10px 15px;*/
+	width: 100%;
+	min-height: 10px;
+	background-color: #fff;
+	/*padding: 10px 15px;*/
 }
 
 .city-select {
 	width: 330px;
 	height: 350px;
-    font-size: 13px;
+	font-size: 13px;
 }
 
 .city-select dl {
-    line-height: 2;
-    clear: both;
-    padding: 3px 0;
-    margin: 0;
+	line-height: 2;
+	clear: both;
+	padding: 3px 0;
+	margin: 0;
 }
 
 .city-select dt {
-    position: absolute;
-    width: 2.5em;
-    font-weight: 500;
-    text-align: right;
-    line-height: 2;
+	position: absolute;
+	width: 2.5em;
+	font-weight: 500;
+	text-align: right;
+	line-height: 2;
 }
 
 .city-select dd {
-    margin-left: 0;
-    line-height: 2;
+	margin-left: 0;
+	line-height: 2;
 }
 
 .city-select.province dd {
-    margin-left: 3em;
+	margin-left: 3em;
 }
 
 .city-select a {
-    display: inline-block;
-    padding: 0 10px;
-    outline: 0;
-    text-decoration: none;
-    white-space: nowrap;
-    margin-right: 2px;
-    text-decoration: none;
-    color: #333;
-    cursor: pointer;
+	display: inline-block;
+	padding: 0 10px;
+	outline: 0;
+	text-decoration: none;
+	white-space: nowrap;
+	margin-right: 2px;
+	text-decoration: none;
+	color: #333;
+	cursor: pointer;
 }
 
-.city-select a:hover,
-.city-select a:focus {
-    background-color: #f1f8ff;
-    border-radius: 2px;
-    color: #46A4FF;
+.city-select a:hover, .city-select a:focus {
+	background-color: #f1f8ff;
+	border-radius: 2px;
+	color: #46A4FF;
 }
 
 .city-select a.active {
-    background-color: #46A4FF;
-    color: #fff;
-    border-radius: 2px;
+	background-color: #46A4FF;
+	color: #fff;
+	border-radius: 2px;
 }
-
-
 
 /* Basic style
  * -------------------------------------------------------------------------- */
 
 /* Header */
-
 .docs-header {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
-.navbar-toggle:hover,
-.navbar-toggle:focus {
-  border-color: #337ab7;
+.navbar-toggle:hover, .navbar-toggle:focus {
+	border-color: #337ab7;
 }
 
 .navbar-toggle .icon-bar {
-  background-color: #337ab7;
+	background-color: #337ab7;
 }
 
-
 /* Jumbotron */
-
 .docs-jumbotron {
-  background-color: #3f51b5;
-  color: #fff;
+	background-color: #3f51b5;
+	color: #fff;
 }
 
 .docs-jumbotron .version {
-  font-size: 14px;
-  color: #fff;
-  filter: alpha(opacity=50);
-  opacity: 0.5;
+	font-size: 14px;
+	color: #fff;
+	filter: alpha(opacity = 50);
+	opacity: 0.5;
 }
 
-
 .docs-carbonads-container {
-  position: relative;
+	position: relative;
 }
 
 .docs-carbonads {
-  max-width: 350px;
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  overflow: hidden;
+	max-width: 350px;
+	padding: 15px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	overflow: hidden;
 }
 
 .carbon-wrap {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .carbon-img {
-  clear: left;
-  float: left;
-  display: block;
+	clear: left;
+	float: left;
+	display: block;
 }
 
-.carbon-text,
-.carbon-poweredby {
-  display: block;
-  margin-left: 140px;
+.carbon-text, .carbon-poweredby {
+	display: block;
+	margin-left: 140px;
 }
 
-.carbon-text,
-.carbon-text:hover,
-.carbon-text:focus {
-  color: #fff;
-  text-decoration: none;
+.carbon-text, .carbon-text:hover, .carbon-text:focus {
+	color: #fff;
+	text-decoration: none;
 }
 
-.carbon-poweredby,
-.carbon-poweredby:hover,
-.carbon-poweredby:focus {
-  color: #ddd;
-  text-decoration: none;
+.carbon-poweredby, .carbon-poweredby:hover, .carbon-poweredby:focus {
+	color: #ddd;
+	text-decoration: none;
 }
 
-@media (min-width: 992px) {
-  .docs-carbonads {
-    position: absolute;
-    right: 0;
-    bottom: 5px;
-  }
+@media ( min-width : 992px) {
+	.docs-carbonads {
+		position: absolute;
+		right: 0;
+		bottom: 5px;
+	}
 }
-
 
 /* Content */
-
 .dropzone {
-  padding: 150px 15px;
-  border: 1px dashed #eee;
-  background-color: #fcfcfc;
-  text-align: center;
+	padding: 150px 15px;
+	border: 1px dashed #eee;
+	background-color: #fcfcfc;
+	text-align: center;
 }
 
 /*.dropzone > input {
   display: inline-block;
   vertical-align: top;
 }*/
-
 .logs {
-  height: 320px;
-  padding: 10px 15px;
-  border: 1px solid #eee;
-  background-color: #fcfcfc;
-  overflow-x: hidden;
-  overflow-y: auto;
+	height: 320px;
+	padding: 10px 15px;
+	border: 1px solid #eee;
+	background-color: #fcfcfc;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
-.logs > p {
-  margin-bottom: 5px;
-  color: #666;
+.logs>p {
+	margin-bottom: 5px;
+	color: #666;
 }
-
 
 /* Footer */
-
 .docs-footer {
-  overflow: hidden;
-  margin-bottom: 300px;
+	overflow: hidden;
+	margin-bottom: 300px;
 }
 
 .hearts {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: #ddd;
-  font-size: 18px;
-  line-height: 30px;
-  text-align: center;
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 30px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	color: #ddd;
+	font-size: 18px;
+	line-height: 30px;
+	text-align: center;
 }
 
 .hearts:hover {
-  color: #ff4136;
+	color: #ff4136;
 }
 
 .hearts:before {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  display: block;
-  height: 0;
-  border-top: 1px solid #eee;
-  content: " ";
+	position: absolute;
+	top: 50%;
+	right: 0;
+	left: 0;
+	display: block;
+	height: 0;
+	border-top: 1px solid #eee;
+	content: " ";
 }
 
 .hearts:after {
-  position: relative;
-  z-index: 1;
-  padding-left: 8px;
-  padding-right: 8px;
-  background-color: #fff;
-  content: "♥";
+	position: relative;
+	z-index: 1;
+	padding-left: 8px;
+	padding-right: 8px;
+	background-color: #fff;
+	content: "♥";
 }
 
 /*input{
   min-width: 360px;
 }*/
 
-
 /* Google Code Prettify
  * -------------------------------------------------------------------------- */
-
 .prettyprint {
-  margin-bottom: 0;
-  padding: 15px !important;
-  border: 1px solid #ddd !important;
+	margin-bottom: 0;
+	padding: 15px !important;
+	border: 1px solid #ddd !important;
 }
